metadata/force-app/main/default/objects/CustomName_xZCkb__c/CustomName_xZCkb__c.object-meta.xml
<CustomObject>
    <description>Description_dUYqn</description>
    <label>CustomLabel_siucm</label>
    <nameField>
        <label>CustomLabel_siucm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_siucms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>