metadata/force-app/main/default/objects/CustomName_xZCkb__c/fields/CustomField_anOFZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_anOFZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldJCGNQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>