metadata/force-app/main/default/objects/CustomName_xZCkb__c/fields/CustomField_MVSaS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MVSaS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzbLCd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>